# EtibGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: EtibGL.hpp
include/EtibGL/: Events.hpp  Window.hpp
src/: Window.cpp
